--- a/components/PostCard/_post-card.scss
+++ b/components/PostCard/_post-card.scss
@@ -18,7 +18,7 @@
     line-height: 1.34;
     letter-spacing: rem(.48);
     font-weight: 600;
-    color: $gray;
+    color: var(--text);
   }
 
   & > &__excerpt {
@@ -30,6 +30,6 @@
     font-weight: 300;
     line-height: 1.34;
     letter-spacing: rem(.48);
-    color: $gray;
+    color: var(--text);
   }
 }
