--- a/scss/pages/_post.scss
+++ b/scss/pages/_post.scss
@@ -40,7 +40,7 @@
     line-height: 1.34;
     letter-spacing: rem(.42);
     text-align: right;
-    color: $gray;
+    color: var(--text);
   }
 
   .grid > &__date {
